--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "gatsby": "^5.7.0",
+    "gatsby-omni-font-loader": "^2.0.2",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^3.8.0",
     "gatsby-plugin-postcss": "^6.8.0",
     "gatsby-plugin-sharp": "^5.8.0",
@@ -31,6 +33,8 @@
     "@types/node": "^18.15.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.14",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.5"
   }
 }
