--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "gatsby": "^5.7.0",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^3.8.0",
     "gatsby-plugin-postcss": "^6.8.0",
     "gatsby-plugin-sharp": "^5.8.0",
