--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@nathanpate/gatsby-omni-font-loader": "^2.0.5",
     "gatsby": "^5.7.0",
     "gatsby-plugin-image": "^3.8.0",
+    "gatsby-plugin-manifest": "^5.8.0",
+    "gatsby-plugin-offline": "^6.8.0",
     "gatsby-plugin-postcss": "^6.8.0",
     "gatsby-plugin-sharp": "^5.8.0",
     "gatsby-plugin-sitemap": "^6.8.0",
